# autotools-mythbuster

./: .dir-locals.el  .gitignore  .mailmap  .pre-commit-config.yaml  Dockerfile  Gemfile  Makefile  chunk.toc  foreword.xmli  forwardporting.xmli  howdoesitwork.xmli  main.docbook
.github/workflows/: docker-build.yml  main.yml
chapters/: autoconf.xmli  automake.xmli  examples.xmli  foreword.xmli  forwardporting.xmli  furtherreadings.xmli  glossary.xmli  libtool.xmli  license.xmli  pkgconfig.xmli  preface.xmli  whosafraid.xmli
chapters/autoconf/: adding-options.xmli  caching.xmli  caching.xmli~  canonical.xmli  custom-tests.xmli  headers.xmli  m4sh.xmli  macros.xmli  system-libraries.xmli
chapters/autoconf/macros/: external.xmli  once.xmli
chapters/automake/: conditional.xmli  flavors.xmli  maintainer.xmli  nonrecursive.xmli  options.xmli  parallel.xmli  silent.xmli
chapters/forwardporting/autoconf/: 2.64.xmli  2.68.xmli  autoconf-2.64.xmli
chapters/forwardporting/automake/: 1.12.xmli  1.13.xmli  1.14.xmli  1.15.xmli  (+1 more)
chapters/libtool/: lafiles.xmli  plugins.xmli  symbols.xmli  version.xmli  windows.xmli  wrappers.xmli
chapters/pkgconfig/: cross-compiling.xmli  dependencies.xmli  file-format.xmli  pkg_check_modules.xmli  variables.xmli
examples/pkgconfig/conditional/: configure.ac
forwardporting/autoconf/: autoconf-2.64.xmli
license/: cc-by-nc-sa.xmli
public/: BingSiteAuth.xml
public/stylesheets/: flameeyes.css  kernel-blue.css
scripts/: footads.js
stylesheets/: flameeyes.css  flameeyes.eu.xsl  mythbuster.scss  mythbuster.xsl  passthrough.xsl
(+7 files in other folders)
